# ur_teaching_app

./: .gitignore  README.md
src/ur5_teaching_webapp/goldfinger_ur5/ur5_pap/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_teaching_webapp/goldfinger_ur5/ur5_pap/action/: RobotControl.action
src/ur5_teaching_webapp/goldfinger_ur5/ur5_pap/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5e.srdf
src/ur5_teaching_webapp/goldfinger_ur5/ur5_pap/launch/: bringup.launch  chomp_planning_pipeline.launch.xml  custom.rviz  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5e_moveit_controller_manager.launch.xml  warehouse.launch
src/ur5_teaching_webapp/goldfinger_ur5/ur5_pap/scripts/: motion_server.py  motion_server_actionlib.py  motion_server_demo.py  pose_generator.py
src/ur5_teaching_webapp/goldfinger_ur5/ur5_pap/srv/: MotionService.srv
src/ur5_teaching_webapp/goldfinger_ur5/ur5_pap_description/: CMakeLists.txt  (+1 more)
src/ur5_teaching_webapp/rest_interface/: CMakeLists.txt  package.xml
src/ur5_teaching_webapp/tree_executor/: CMakeLists.txt  package.xml
src/ur5_teaching_webapp/webbapp/: Simple_Pickup_Workflow.json  js_playground.js  konva_sample.json  konva_sample_v2.json  same_output.json
(+36 files in other folders)
